--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,12 @@
 PORT=5000
 NODE_ENV=development
 
+DB_HOST=mysql
+DB_PORT=3306
+DB_USER=app_user
+DB_PASSWORD=app_password
+DB_NAME=employee_task_db
+
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
