--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "drizzle-orm": "^0.45.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
+    "morgan": "^1.10.0",
     "mysql2": "^3.16.1",
+    "winston": "^3.15.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^25.0.9",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
