build(docker): Simplify Docker entrypoints
- Remove custom `entrypoint.sh` scripts for backend and frontend services.
- Update Dockerfiles to use direct `pnpm dev` command as `ENTRYPOINT`.
- Eliminate in-container dependency checks, database waits, and migrations from startup.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,15 +12,11 @@ COPY package.json pnpm-lock.yaml ./
 # Use --no-frozen-lockfile in case lockfile needs updates during build
 RUN pnpm install --no-frozen-lockfile
 
-# Copy entrypoint script
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Copy source code (will be overridden by volume mount in development)
 COPY . .
 
 # Expose port
 EXPOSE 5173
 
-# Use entrypoint script
-ENTRYPOINT ["/entrypoint.sh"]
+# Use entrypoint script with explicit shell
+ENTRYPOINT ["pnpm", "dev", "--host", "0.0.0.0"]
