feat(docker): Add robust backend Docker entrypoint
- Implement `docker-entrypoint.sh` for controlled backend startup
- Configure backend to wait for MySQL availability before starting
- Automatically apply Drizzle database migrations on startup
- Update Dockerfiles to use `CMD` for default container command
- Remove automatic Drizzle schema generation from `postinstall`

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,22 @@
 FROM node:20-alpine
 
-# Install netcat for health checks
 RUN apk add --no-cache netcat-openbsd
 
 WORKDIR /app
 
-# Install pnpm
 RUN npm install -g pnpm
 
-# Copy package files
 COPY package.json pnpm-lock.yaml ./
-
-# Copy config files needed for postinstall script
 COPY drizzle.config.ts tsconfig.json ./
 
-# Install dependencies (skip postinstall during Docker build)
-# Use --no-frozen-lockfile in case lockfile needs updates during build
 RUN pnpm install --no-frozen-lockfile --ignore-scripts
 
-# Copy source code (will be overridden by volume mount in development)
 COPY . .
 
-# Expose port
+# Copy entrypoint
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 EXPOSE 5000
 
-# Use entrypoint script with explicit shell
-ENTRYPOINT ["pnpm", "dev"]
+CMD ["docker-entrypoint.sh"]
